# iroha

./: CMakeLists.txt
.circleci/: config.yml
cmake/: dependencies.cmake  functions.cmake
cmake/Modules/: FindCppRedis.cmake  FindEd25519.cmake  FindGFlags.cmake  FindGRPC.cmake  FindGTest.cmake  FindLibPqxx.cmake  FindOptionalLite.cmake  FindProtobuf.cmake  FindRapidjson.cmake  FindRxCpp.cmake  FindSpdlog.cmake  FindTBB.cmake  FindUvw.cmake
docker/: docker-compose-dev.yml  docker-compose.yml
docker/develop/: Dockerfile  README.md
docker/tiny/: Dockerfile
iroha-cli/: CMakeLists.txt  client.cpp  main.cpp
irohad/ametsuchi/: CMakeLists.txt  storage.hpp
irohad/ametsuchi/impl/: flat_file_block_query.cpp  flat_file_block_query.hpp  redis_block_query.hpp  storage_impl.cpp  storage_impl.hpp
irohad/consensus/yac/: CMakeLists.txt
irohad/main/: application.cpp
irohad/main/impl/: ordering_init.cpp  ordering_init.hpp
irohad/model/: CMakeLists.txt
irohad/model/converters/impl/: json_query_factory.cpp  (+1 more)
irohad/model/generators/: query_generator.hpp
irohad/network/: peer_communication_service.hpp
irohad/network/impl/: peer_communication_service_impl.cpp  peer_communication_service_impl.hpp
irohad/ordering/: CMakeLists.txt
irohad/ordering/impl/: ordering_service_impl.cpp  ordering_service_impl.hpp
irohad/torii/impl/: query_service.cpp
libs/: CMakeLists.txt
schema/: CMakeLists.txt  queries.proto
scripts/: build.sh  build_in_docker.sh  compose-run.sh  compose-scale.sh  run-ametsuchi-dev.sh  run-consensus-dev.sh  stack-run.sh  stack-scale.sh
(+11 files in other folders)
